Fixed mobile footer icon gap issues

--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ footer {
             margin: 0 0 10px;
         }
         .right {
-            display: block;
+            justify-content: center;
         }
     }
 }
